<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY appname "WhereDat"><!ENTITY author "Oded"><!ENTITY version "Odedre">]>
<resources>

    <!--variable details-->
    <string name="app_name_rrrrr">Java Number</string>
    <string name="txt_welcome_rrrrr">India\'s Most Trusted Matka App</string>
    <string name="txt_welcome1_rrrrr">Java Number</string>
    <!--constant details-->
    <string name="sign_in_rrrrr">Log In</string>
    <string name="phone_number_rrrrr">Mobile Number</string>
    <string name="pass_rrrrr">Password</string>
    <string name="forgot_pass_rrrrr">Forgot Password?</string>
    <string name="no_account_rrrrr">Don\'t have an account? REGISTER</string>
    <string name="signup_rrrrr">Register</string>
    <string name="enter_name_rrrrr">Enter your name</string>
    <string name="enter_mobile_number_rrrrr">Enter your mobile number</string>
    <string name="enter_pin_rrrrr">Enter your PIN</string>
    <string name="sign_up_rrrrr">Sign up</string>
    <string name="already_registered_rrrrr">Already Registered? LOGIN</string>
    <string name="next_rrrrr">Go</string>
    <string name="back_login_rrrrr">Back to LOGIN</string>
    <string name="pin_reset_rrrrr">Reset PIN</string>
    <string name="enter_security_pin_rrrrr">Please Enter Your Security PIN</string>
    <string name="remove_rrrrr">Delete</string>
    <string name="digit_0_rrrrr">0</string>
    <string name="clear_rrrrr">Clr</string>
    <string name="digit_9_rrrrr">9</string>
    <string name="digit_8_rrrrr">8</string>
    <string name="digit_7_rrrrr">7</string>
    <string name="digit_6_rrrrr">6</string>
    <string name="digit_5_rrrrr">5</string>
    <string name="digit_4_rrrrr">4</string>
    <string name="digit_3_rrrrr">3</string>
    <string name="digit_2_rrrrr">2</string>
    <string name="digit_1_rrrrr">1</string>
    <string name="conform_pass_rrrrr">Confirm Password</string>
    <string name="dashboard_rrrrr">Home</string>
    <string name="full_profile_rrrrr">Profile</string>
    <string name="win_his_rrrrr">Win History</string>
    <string name="bid_his_rrrrr">Bid History</string>
    <string name="rates_rrrrr">Game Rates</string>
    <string name="how_play_rrrrr">Information</string>
    <string name="contact_us_rrrrr">Support</string>
    <string name="share_friends_rrrrr">Share With Friends</string>
    <string name="app_rates_rrrrr">Rate App</string>
    <string name="change_pass_rrrrr">Change Password</string>
    <string name="signout_rrrrr">Logout</string>
    <string name="vault_rrrrr">Wallet</string>
    <string name="wallet_points_rrrrr">Points Available</string>
    <string name="coins_rrrrr">Points</string>
    <string name="push_rrrrr">Submit Request</string>
    <string name="coins_withdraw_rrrrr">Withdraw Funds</string>
    <string name="withdraw_coins_rrrrr">Enter Amount</string>
    <string name="select_withdraw_method_rrrrr">Select Payment Method</string>
    <string name="method_of_payment_rrrrr">Payment Method</string>
    <string name="account_owner_name_rrrrr">Account Holder Name</string>
    <string name="num_of_account_rrrrr">Account Number</string>
    <string name="enter_account_number_rrrrr">Enter Your Account Number</string>
    <string name="conform_account_num_rrrrr">Confirm Account Number</string>
    <string name="ifsc_code_rrrrr">IFSC Code</string>
    <string name="enter_ifsc_code_rrrrr">Enter IFSC code</string>
    <string name="branch_address_rrrrr">Branch Address</string>
    <string name="enter_branch_address_rrrrr">Enter Branch Address</string>
    <string name="bank_name_rrrrr">Bank Name</string>
    <string name="enter_bank_name_rrrrr">Enter Bank Name</string>
    <string name="name_rrrrr">Name</string>
    <string name="enter_your_email_rrrrr">Enter your email</string>
    <string name="email_rrrrr">Email</string>
    <string name="from_date_rrrrr">From Date</string>
    <string name="to_date_rrrrr">To Date</string>
    <string name="single_digit_rrrrr">Single Digit</string>
    <string name="jodi_digit_rrrrr">Jodi Digit</string>
    <string name="single_pana_rrrrr">Single Panna</string>
    <string name="double_digit_rrrrr">Double Panna</string>
    <string name="triple_digit_rrrrr">Triple Panna</string>
    <string name="half_sangam_rrrrr">Half Sangam</string>
    <string name="full_sangam_rrrrr">Full Sangam</string>
    <string name="chart_rrrrr">Chart</string>
    <string name="star_line_game_rrrrr">Starline Rates</string>
    <string name="double_pana_rrrrr">Double Panna</string>
    <string name="triple_pana_rrrrr">Triple Panna</string>
    <string name="choose_date_rrrrr">Choose Date</string>
    <string name="choose_session_rrrrr">Choose Session</string>
    <string name="open_rrrrr">Open</string>
    <string name="close_rrrrr">Close</string>
    <string name="digits_rrrrr">Digits</string>
    <string name="enter_digits_rrrrr">Enter Digits</string>
    <string name="points_rrrrr">Amount</string>
    <string name="enter_points_rrrrr">Enter Points</string>
    <string name="proceed_rrrrr">Proceed</string>
    <string name="bid_warn_rrrrr">Once a bid is placed, it can not be cancelled.</string>
    <string name="cancel_rrrrr">Cancel</string>
    <string name="conform_rrrrr">Confirm</string>
    <string name="completed_rrrrr">Completed</string>
    <string name="bid_submit_rrrrr">Bid Successfully Submitted</string>
    <string name="play_again_rrrrr">Play Again</string>
    <string name="open_digit_rrrrr">Open Digit</string>
    <string name="close_pana_rrrrr">Close Panna</string>
    <string name="open_pana_rrrrr">Open Panna</string>
    <string name="close_digit_rrrrr">Close Digit</string>
    <string name="add_funds_rrrrr">Add Funds</string>
    <string name="wallet_statement_rrrrr">Wallet Statement</string>
    <string name="transfer_points_rrrrr">Share Points</string>
    <string name="bank_holder_name_rrrrr">Please Enter Your Bank Account Holder Name</string>
    <string name="bank_acc_num_rrrrr">Please Enter Your Bank Account Number</string>
    <string name="valid_acc_num_rrrrr">Please Enter Valid Bank Account Number</string>
    <string name="conform_acc_num_rrrrr">Please Enter Your Conform Bank Account Number</string>
    <string name="wrong_acc_rrrrr">Account Number Not Matching</string>
    <string name="ifsc_enter_rrrrr">Please Enter Your Bank IFSC Code</string>
    <string name="valid_ifsc_rrrrr">Please Enter Valid IFSC Code of Your Bank</string>
    <string name="banks_name_rrrrr">Please Enter Your Bank Name</string>
    <string name="branchs_address_rrrrr">Please Enter Your Branch Address</string>
    <string name="upi_rrrrr">UPI</string>
    <string name="changePassword_rrrrr">changePassword</string>
    <string name="new_pass_rrrrr">Please enter your new Password</string>
    <string name="four_char_rrrrr">New password must be of at least 4 characters length</string>
    <string name="conf_pass_rrrrr">Please enter conform password</string>
    <string name="pass_not_match_rrrrr">Password not matching</string>
    <string name="mo_num_rrrrr">Please Enter Mobile Number</string>
    <string name="valid_mo_num_rrrrr">Please Enter Valid Mobile Number</string>
    <string name="verification_rrrrr">verification</string>
    <string name="game_rrrrr">Game</string>
    <string name="game_name_rrrrr">game_name</string>
    <string name="enter_digit_rrrrr">Please enter digits</string>
    <string name="valid_digit_rrrrr">Please Enter Valid digits</string>
    <string name="enter_point_rrrrr">Please Enter Amount</string>
    <string name="valid_open_digits_rrrrr">Please Enter Valid Open Digits</string>
    <string name="close_pana_enter_rrrrr">Please Enter Close Panna</string>
    <string name="valid_close_pana_rrrrr">Please Enter Valid Close Panna</string>
    <string name="valid_open_pana_rrrrr">Please Enter Valid Open Panna</string>
    <string name="close_digits_rrrrr">Please Enter Close Digits</string>
    <string name="valid_close_digits_rrrrr">Please Enter Valid Close Digits</string>
    <string name="bottom_sheet_rrrrr">bottomSheet</string>
    <string name="main_activity_rrrrr">MainActivity</string>
    <string name="no_vid_rrrrr">youtube video not added yet</string>
    <string name="enter_pass_rrrrr">Please Enter Password</string>
    <string name="four_pass_rrrrr">please Enter Min 4 Digits Password</string>
    <string name="history_rrrrr">History</string>
    <string name="exit_application_rrrrr">Exit Application</string>
    <string name="conf_exit_rrrrr">Are you sure you want to exit?</string>
    <string name="enter_name__rrrrr">Please Enter Your Name</string>
    <string name="enter_mail_rrrrr">Please Enter Your email</string>
    <string name="valid_mail_rrrrr">Please Enter Valid Email</string>
    <string name="pin_enter_rrrrr">Please Enter Pin</string>
    <string name="four_pin_rrrrr">Please Enter Min 4 Digit Pin</string>
    <string name="enter_valid_number_rrrrr">Enter Valid Number</string>
    <string name="min_amt_rrrrr">Minimum Amount must be greater then </string>
    <string name="max_amt_rrrrr">Maximum Amount must be less then </string>
    <string name="pay_method_rrrrr">Please Select Payment Method</string>
    <string name="whatsapp_rrrrr">WhatsApp</string>
    <string name="new_passs_rrrrr">Enter New Password</string>
    <string name="response_error_rrrrr">Try Again</string>
    <string name="on_api_failure_rrrrr">An error has occurred</string>
    <string name="success_rrrrr">success</string>
    <string name="bids_api_open_rrrrr">{ \"bids\":</string>
    <string name="bids_api_close_rrrrr">}</string>
    <string name="user_mobile_number_rrrrr">User Mobile Number</string>
    <string name="verify_rrrrr">Verify</string>
    <string name="b16_rrrrr">b16</string>
    <string name="b64_rrrrr">b64</string>
    <string-array name="appList_rrrrr">
        <item>@string/b64_rrrrr</item>
        <item>@string/b16_rrrrr</item>
    </string-array>
    <string name="no_net_rrrrr">You are not connected to internet. Please check your internet connection</string>
    <string name="check_net_rrrrr">Please check your internet connection</string>
    <string name="full_name_rrrrr">upi id</string>
    <string name="game_data_rrrrr">upi id</string>
    <string name="history_activity_rrrrr">upi id</string>
    <string name="google_pay_rrrrr">Google Pay</string>
    <string name="pay_rrrrr">Add Points</string>
    <string name="phonepe_rrrrr">PhonePe</string>
    <string name="paytm_rrrrr">PayTM</string>
    <string name="razorpay_rrrrr">Razorpay</string>
    <string name="other_pay_rrrrr">PhonePe, Google Pay, Paytm, UPI</string>
    <string name="proceed1_rrrrr">Submit</string>
    <string name="left_digit_rrrrr">Left Digit</string>
    <string name="right_digit_rrrrr">Right Digit</string>
    <string name="gali_disawar_game_rrrrr">GALI DISAWAR RATES</string>
    <string name="select_gateway_rrrrr">Select Payment Gateway</string>
    <string name="select_amount_rrrrr">Select Points Amount</string>
    <string name="v500_rrrrr">500</string>
    <string name="v1000_rrrrr">1000</string>
    <string name="v2000_rrrrr">2000</string>
    <string name="v5000_rrrrr">5000</string>
    <string name="v10000_rrrrr">10000</string>
    <string name="upitxt_rrrrr">You will get only 10 points on Registration.</string>
    <string name="pay_partner_rrrrr">Our Official Payment Partners</string>
    <string name="content_des_rrrrr">Content Description</string>
    <string name="bank_details_rrrrr">Bank Details</string>
    <string name="conf_trans_point_rrrrr">Confirm Points Transfer ?</string>


</resources>