<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gradient_background"
    android:gravity="center"
    android:orientation="vertical">

    <!-- Put Invisible Layout Here  -->
    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginVertical="20dp"
        android:src="@drawable/ic_complete_green__tick_icon_01" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completed_rrrrr"
        android:textColor="@color/black_rrrrr"
        android:textSize="15sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/bid_submit_rrrrr"
        android:textColor="@color/black_rrrrr"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:onClick="playAgainBtn"
        android:text="@string/play_again_rrrrr"
        android:textColor="@color/green_rrrrr" />
</LinearLayout>