<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_rrrrr"
    android:orientation="vertical"
    tools:context="com.example.myapplication.e.b.activity_transfer_coins">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/rrrrr_appbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/rrrrr_toolbar_rrrrr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main_gradient_background"
                android:contentInsetStart="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:menu="@menu/top_right_wallet_menu"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="@string/transfer_points_rrrrr"
                app:titleTextColor="@color/black_rrrrr" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rrrrr_dataConText_rrrrr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/warn_red_rrrrr"
            android:elevation="1dp"
            android:padding="5dp"
            android:text="@string/no_net_rrrrr"
            android:textColor="@color/white_rrrrr"
            android:visibility="gone" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:text="@string/user_mobile_number_rrrrr"
            android:textColor="@color/white_rrrrr"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rrrrr_user_num_rrrrr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext_focused"
            android:hint="0000000000"
            android:inputType="number"
            android:maxLength="10"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:singleLine="true"
            android:textColor="@color/white_rrrrr"
            android:textColorHint="@color/white_rrrrr" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rrrrr_userN_rrrrr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:textColor="@color/green_rrrrr"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rrrrr_verifyText_rrrrr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/golden_color"
            android:enabled="false"
            android:gravity="center"
            android:onClick="btnVerify"
            android:paddingHorizontal="40dp"
            android:paddingVertical="12sp"
            android:text="@string/verify_rrrrr"
            android:textColor="@color/white_rrrrr"
            android:textSize="18sp"
            app:cornerRadius="10dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rrrrr_coin_txt_rrrrr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/coins_rrrrr"
            android:textColor="@color/black_rrrrr"
            android:textStyle="bold"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rrrrr_inputCoins_rrrrr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/dark_border"
            android:hint="@string/enter_points_rrrrr"
            android:inputType="number"
            android:maxLength="9"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:singleLine="true"
            android:textColor="@color/black_rrrrr"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rrrrr_suBtn_rrrrr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/button_color1_rrrrr"
            android:onClick="submitCoins"
            android:paddingVertical="12dp"
            android:text="@string/push_rrrrr"
            android:visibility="gone"
            app:cornerRadius="5dp"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/rrrrr_progressBar_rrrrr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />


</RelativeLayout>